feat: card and deck implementation

--- a/blackjack/blackjack/blackjack.vcxproj
+++ b/blackjack/blackjack/blackjack.vcxproj
@@ -159,6 +159,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Card.h" />
+    <ClInclude Include="CardSuit.h" />
+    <ClInclude Include="CardType.h" />
     <ClInclude Include="Deck.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Rules.h" />
