--- a/blackjack/blackjack/blackjack.vcxproj
+++ b/blackjack/blackjack/blackjack.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="CardSuit.h" />
     <ClInclude Include="CardType.h" />
     <ClInclude Include="Deck.h" />
+    <ClInclude Include="OwnerType.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Rules.h" />
   </ItemGroup>
