--- a/blackjack/blackjack/blackjack.vcxproj.filters
+++ b/blackjack/blackjack/blackjack.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="CardType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
