--- a/blackjack/blackjack/blackjack.vcxproj
+++ b/blackjack/blackjack/blackjack.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="Startup.cpp" />
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="Deck.cpp" />
@@ -163,6 +164,7 @@
     <ClInclude Include="CardType.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Deck.h" />
+    <ClInclude Include="Game.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Rules.h" />
   </ItemGroup>
